-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
When Lustre releases a lot of cached pages at once, it still calls page_release, instead of pagevec_release. When clearing OST ldlm lock lrus, the ldlm_bl threads end up spending much of their time contending for the zone lock taken by page_release.
With many namespaces and parallel lru clearing (as Cray does at the end of each job), this can be a significant time sink. Using pagevec release is much better. Patch coming shortly.
- is related to
-
LU-9920 Use pagevec for marking pages dirty
-
- Resolved
-